--- a/paper/content/abstract.tex
+++ b/paper/content/abstract.tex
@@ -1,7 +1,5 @@
 % !TEX root = ../main.tex
 %
-\begin{abstract}
-TODO
-
-\keywords{Machine Learning \and Spectral Graph Theory \and Graph Coarsening}
-\end{abstract}
+% \begin{abstract}
+% TODO
+% \end{abstract}
