--- a/paper/content/chapter-introduction.tex
+++ b/paper/content/chapter-introduction.tex
@@ -16,11 +16,11 @@ Coarsening reduces the size of a given graph while preserving its overall struct
 Graph algorithms can then be run on the smaller coarsened graph.
 Afterwards the result for the coarsened graph can be iteratively refined to obtain an approximate result for the original graph.
 \Cref{fig:intro:overview} illustrates this approach.
-\begin{figure}
+\begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.8\linewidth]{gfx/intro/overview.pdf}
 	\caption{
-		Using graph coarsening to speed up graph algorithms, e.g.\@ Min-Cut.
+		Using graph coarsening to speed up graph algorithms, e.g.\  Min-Cut.
 	}\label{fig:intro:overview}
 \end{figure}
 
