--- a/paper/content/titlepages.tex
+++ b/paper/content/titlepages.tex
@@ -3,10 +3,6 @@
 
 \title{\thesisTitle}
 \author{\thesisName}
-\institute{{\thesisUniversityGroup} \\
-{\thesisUniversityInstitute} \\
-{\thesisUniversity} \\
-{\thesisUniversityStreetAddress} \\
-\thesisUniversityPostalCode\ \thesisUniversityCity}
+\date{\thesisDate}
 
 \maketitle
