--- a/paper/main.tex
+++ b/paper/main.tex
@@ -1,7 +1,7 @@
 % **************************************************
 % Document Class Definition
 % **************************************************
-\documentclass[runningheads]{llncs}
+\documentclass[a4paper,twoside]{article}
 
 \input{config}
 
