--- a/paper/content/chapter-spectral-graph-theory.tex
+++ b/paper/content/chapter-spectral-graph-theory.tex
@@ -7,7 +7,7 @@
 We start with an introduction to spectral graph theory, which will allow us to characterize and compare the structure of graphs.
 Graphs are most commonly described in their vertex base, i.e.\  the connection strength $w_{i j}$ of pairs $(v_i, v_j)$ of vertices.
 \begin{align*}
-	G :=&\, (\mathcal{V}, \mathcal{E}, W) \text{ with } W \in \mathbb{R}^{N \times N}, N := |\mathcal{V}|
+	G :=&\, (\mathcal{V}, \mathcal{E}, W)\quad\text{with } W \in \mathbb{R}^{N \times N}, N := |\mathcal{V}|
 \end{align*}
 In this paper we will only consider undirected graphs with non-negative real weights and without self-loops ($\forall v_i: w_{i i} = 0$).
 
